# svd

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: vercel-deploy.yml
app/: globals.css  layout.tsx  page.tsx
apps/api/: main.py  pyproject.toml
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
apps/web/components/: AboutAuthor.tsx  CompressionComparison.tsx  DropZone.tsx  ErrorCurve.tsx  MatrixRepresentation.tsx  PerformanceMonitor.tsx  ProcessingProgressRing.tsx  Quiz.tsx  SVDComputationGuide.tsx  SVDVisualization.tsx  WelcomeSection.tsx
apps/web/types/: plotly.d.ts
apps/web/utils/: svdCompression.ts  svdWorker.ts  workerCoordinator.ts
components/: AboutAuthor.tsx  CompressionComparison.tsx  DropZone.tsx  ErrorBoundary.tsx  ErrorCurve.tsx  MatrixRepresentation.tsx  PerformanceMonitor.tsx  PerformanceTracker.tsx  ProcessingProgressRing.tsx  Quiz.tsx  README.md  ReferencesSection.tsx  SVDVisualization.tsx  WelcomeSection.tsx  WriteupSection.tsx  icons.tsx
docs/: architecture.mmd
handout/: handout.md
hooks/: useSampleData.ts
public/: sw.js
screenshots/: README.md
scripts/: README.md  preprocess-sample.js  verify-deployment.js
slides/: README.md
utils/: README.md  statefulSession.ts  statefulSvdWorker.ts  svdCompression.ts  svdComputationManager.ts  svdCore.ts  svdWorker.ts  workerCoordinator.ts  workerProtocol.ts
